# pmr_tp_final

./: .dockerignore  README.md  docker-compose.yaml  package.xml  pmr  setup.cfg  setup.py
bags/4agents/: metadata.yaml
bags/6agents/: metadata.yaml
config/: agents.txt  crazyflies.yaml
docker/: pkg.Dockerfile  sim.Dockerfile
docs/: circle_tangent_vector.md  mvp_plan.md
launch/: controller.launch.py  rviz.launch.py
pmr_tp_final/: __init__.py  commander.py  constraints.py  controller.py  optimizer.py  robot_model.py  visualization.py
rviz/: simul.rviz
